--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
            	    <div class="works_container bd-grid">
 
            	  <div class="works_img">
-           	    <img src="img/1.png" alt="">
+           	    <img src="" alt="">
 
            	    <div class="works_data">
            	    <a href="#" class="works_link"><i class="bx bx-link-alt"></i></a>
